--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <a href="#servicios">Servicios</a>
         <a href="#equipo">Equipo</a>
         <a href="#contacto">Contacto</a>
-        <a class="cta" href="https://wa.me/{{WHATSAPP_NUMBER}}">Pide cita</a>
+        <a class="cta" href="https://wa.me/{{34622453416}}">Pide cita</a>
       </nav>
     </header>
 
